<resources>
    <string name="app_name">My Appl</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_user">Welcome User</string>
    <string name="email">E-mail</string>

</resources>
