<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/milkback"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.myappl.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/applogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etusername"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/username"
            android:hint="@string/username"
            android:paddingLeft="2dp" />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password" />
    </LinearLayout>

    <Button
        android:id="@+id/tvlogin"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ff4242"
        android:text="@string/login"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/tvregister"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textColor="#04ea00"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
